Update README with comprehensive project documentation and improve gitignore configuration
- Rewrite README.md with complete project documentation including game features, controls, installation, compilation instructions, project structure, code architecture, level format, save system, and character selection
- Add detailed tables for keyboard controls, main classes, environment variables, and level file format specifications
- Include project directory structure overview and technical architecture explanation covering case system and persistence service
- Update .gitignore with comprehensive file patterns for Java, Python, IDE, logs, temporary files, dependencies, and OS-specific files
- Add asset management section covering graphics resources, character sprites, and tile sets used in the game